[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Main.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/logo.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 42
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 48
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1087.0
color = Color( 0.121569, 0.121569, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -3.0
custom_constants/margin_right = 400
custom_constants/margin_top = 125
custom_constants/margin_left = 400
custom_constants/margin_bottom = 75
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
margin_left = 400.0
margin_top = 125.0
margin_right = 1517.0
margin_bottom = 1005.0

[node name="Title" type="VBoxContainer" parent="GUI/VBoxContainer"]
margin_right = 1117.0
margin_bottom = 438.0
size_flags_horizontal = 15
size_flags_vertical = 15

[node name="Title" type="Label" parent="GUI/VBoxContainer/Title"]
margin_right = 1117.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.819608, 0.819608, 1 )
text = "Definitely Not UNO"
align = 1

[node name="Logo" type="CenterContainer" parent="GUI/VBoxContainer/Title"]
margin_top = 117.0
margin_right = 1117.0
margin_bottom = 438.0
size_flags_vertical = 3

[node name="LogoTexture" type="TextureRect" parent="GUI/VBoxContainer/Title/Logo"]
margin_left = 380.0
margin_top = 13.0
margin_right = 737.0
margin_bottom = 308.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 3 )

[node name="Input" type="MarginContainer" parent="GUI/VBoxContainer"]
margin_top = 442.0
margin_right = 1117.0
margin_bottom = 880.0
size_flags_vertical = 3
custom_constants/margin_right = 250
custom_constants/margin_left = 250

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/Input"]
margin_left = 250.0
margin_right = 867.0
margin_bottom = 438.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer/Input/VBoxContainer"]
margin_right = 617.0
margin_bottom = 384.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerConnect" type="VBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer"]
visible = false
margin_top = 20.0
margin_right = 617.0
margin_bottom = 384.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerOption" type="OptionButton" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect"]
margin_top = 81.0
margin_right = 617.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 2 )
text = "Server"
align = 1

[node name="AddressSelect" type="MarginContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect"]
margin_top = 138.0
margin_right = 617.0
margin_bottom = 218.0
size_flags_horizontal = 3

[node name="Address" type="HBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect/AddressSelect"]
margin_right = 617.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddressInput" type="LineEdit" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect/AddressSelect"]
margin_right = 617.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Server IP"
caret_blink = true

[node name="ConnectContainer" type="HBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect"]
margin_top = 222.0
margin_right = 617.0
margin_bottom = 283.0
alignment = 1

[node name="Connect" type="Button" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect/ConnectContainer"]
margin_left = 196.0
margin_right = 421.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 54.5504, -0.0675049 )
custom_fonts/font = SubResource( 4 )
text = "Connect"

[node name="LobbyConnect" type="VBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 617.0
margin_bottom = 384.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameSelect" type="MarginContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect"]
margin_top = 45.0
margin_right = 617.0
margin_bottom = 125.0
size_flags_horizontal = 3
custom_constants/margin_right = 60
custom_constants/margin_left = 60

[node name="Name" type="HBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/NameSelect"]
margin_left = 60.0
margin_right = 557.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameInput" type="LineEdit" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/NameSelect"]
margin_left = 60.0
margin_right = 557.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
align = 1
max_length = 10
placeholder_text = "Name"
caret_blink = true

[node name="HostToggle" type="CheckButton" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect"]
margin_top = 129.0
margin_right = 617.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 5 )
text = "Host"

[node name="JoinCode" type="MarginContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect"]
margin_top = 173.0
margin_right = 617.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="JoinCode" type="HBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/JoinCode"]
margin_right = 617.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinCodeInput" type="LineEdit" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/JoinCode"]
margin_right = 617.0
margin_bottom = 80.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Join Code"
caret_blink = true

[node name="JoinContainer" type="HBoxContainer" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect"]
margin_top = 257.0
margin_right = 617.0
margin_bottom = 318.0
alignment = 1

[node name="Join" type="Button" parent="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/JoinContainer"]
margin_left = 247.0
margin_right = 369.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 54.5504, -0.0675049 )
custom_fonts/font = SubResource( 4 )
text = "Join"

[node name="Status" type="MarginContainer" parent="GUI/VBoxContainer/Input/VBoxContainer"]
margin_top = 388.0
margin_right = 617.0
margin_bottom = 438.0
custom_constants/margin_top = 20

[node name="Message" type="Label" parent="GUI/VBoxContainer/Input/VBoxContainer/Status"]
margin_top = 20.0
margin_right = 617.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.772549, 0.0980392, 0.0980392, 1 )
text = "Error"
align = 1

[node name="Copyright" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -42.403
margin_right = 341.0
margin_bottom = 2.59705
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Copyright"]
margin_left = 7.0
margin_right = 396.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="Copyright/HBoxContainer"]
margin_top = 3.0
margin_right = 290.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.639216, 0.639216, 0.639216, 0.647059 )
text = "Indecision Games Â©"

[node name="Debug" type="Button" parent="Copyright/HBoxContainer"]
margin_left = 294.0
margin_right = 389.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 54.5504, -0.0675049 )
custom_fonts/font = SubResource( 8 )
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1512.0
margin_top = -42.403
margin_right = 1908.0
margin_bottom = 2.59705
custom_constants/margin_left = 7
custom_constants/margin_bottom = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Version"]
margin_left = 7.0
margin_right = 396.0
margin_bottom = 38.0
alignment = 2

[node name="VersionLabel" type="Label" parent="Version/HBoxContainer"]
margin_left = 358.0
margin_top = 3.0
margin_right = 389.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.639216, 0.639216, 0.639216, 0.647059 )
text = "v0"

[connection signal="item_selected" from="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect/ServerOption" to="." method="_on_ServerOption_item_selected"]
[connection signal="pressed" from="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/ServerConnect/ConnectContainer/Connect" to="." method="_on_Connect_pressed"]
[connection signal="toggled" from="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/HostToggle" to="." method="_on_HostToggle_toggled"]
[connection signal="pressed" from="GUI/VBoxContainer/Input/VBoxContainer/MarginContainer/LobbyConnect/JoinContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Copyright/HBoxContainer/Debug" to="." method="_on_Debug_pressed"]
